[gd_scene load_steps=6 format=3 uid="uid://buy8h0h6ptft7"]

[ext_resource type="Texture2D" uid="uid://i1werajk38px" path="res://Sprites/square.png" id="1_vsg2r"]
[ext_resource type="Script" path="res://Scripts/SceneChanger.gd" id="2_apedn"]
[ext_resource type="Script" path="res://Scripts/Input/Signals/InteractSignal.gd" id="2_t2hda"]
[ext_resource type="Resource" uid="uid://b4vguxa4rp3h8" path="res://player.tres" id="3_t34av"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jtaga"]
size = Vector2(16, 16)

[node name="LevelEnter" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
z_as_relative = false
texture = ExtResource("1_vsg2r")
centered = false

[node name="InteractSignal" type="Node2D" parent="."]
script = ExtResource("2_t2hda")
player_res = ExtResource("3_t34av")

[node name="Area2D" type="Area2D" parent="InteractSignal"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractSignal/Area2D"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_jtaga")

[node name="SceneChanger" type="Node" parent="."]
script = ExtResource("2_apedn")

[connection signal="interact_pressed" from="InteractSignal" to="SceneChanger" method="change"]
[connection signal="body_entered" from="InteractSignal/Area2D" to="InteractSignal" method="on_player_entered"]
[connection signal="body_exited" from="InteractSignal/Area2D" to="InteractSignal" method="on_player_exit"]
